# l-systems-tree-generator

./: .gitignore  README.md
docs/: 01_title.tex  02_referat.tex  03_content.tex  04_intro.tex  05_analytical.tex  06_design.tex  07_technical.tex  08_research.tex  conclusion.tex  lib.tex  preamble.tex  prilozhenieA.tex  prilozhenieB.tex  report.tex  sources.bib
docs/code/: clean_report.sh  l-system.cpp  phong.cpp  shadow_map.cpp  z-buffer.cpp
docs/data/: stage1_iterations_result.csv  stage2_resolution_result.csv  stage3_shadowmap_result.csv
qt_ui/: mainwindow.h
src/: CMakeLists.txt  main.cpp
src/benchmark/: benchmark_runner.cpp  benchmark_runner.h  main_benchmark.cpp
src/camera/: camera.h
src/camera/camera_factory/: camera_factory.cpp  camera_factory.h
src/camera/free_camera/: free_camera.cpp  free_camera.h
src/camera/orbit_camera/: orbit_camera.cpp  orbit_camera.h
src/data/: plot.py  plot_new.py
src/geometry/: mesh.cpp  mesh.h
src/lsystem/: l_system_generator.cpp  l_system_generator.h  leaf_generator.cpp  leaf_generator.h  turtle_interpreter_3_d.cpp  turtle_interpreter_3_d.h
src/managers/camera_manager/: camera_manager.cpp  camera_manager.h
src/objects/: scene_object.cpp  scene_object.h
src/objects/mesh/: instanced_mesh_object.cpp  instanced_mesh_object.h  mesh_object.cpp  mesh_object.h  plane_object.cpp  plane_object.h
src/renderer/: scene_renderer.cpp  scene_renderer.h
src/renderer/lighting/: light.h  lighting.cpp  lighting.h
src/renderer/rasterizer/: rasterizer.cpp  rasterizer.h
src/renderer/shadow-mapping/: shadow_map_renderer.cpp  shadow_map_renderer.h
src/renderer/texture_loader/: texture_loader.cpp  texture_loader.h
src/renderer/z-buffer/: z_buffer.cpp  z_buffer.h
src/scene/: scene.cpp  scene.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/visitor/: base_visitor.h  draw_visitor.cpp  draw_visitor.h  shadow_visitor.cpp  shadow_visitor.h
